# open-banking-mobile-v2

./: .gitlab-ci.yml
.claude/: PROJECT_CONTEXT.md
api-catalog/: api-specification-guide.html
api-catalog/assets/: styles.css
api-catalog/diagrams/: api-overview.mmd  emandate-flow.mmd
api-catalog/docs/: api-mapping-obie.md  consent-service-design.md
api-catalog/obie-specs/: vrp-openapi.yaml
helm/: values.yaml
helm/templates/: ingress.yaml  istio.yaml
services/bd-online-mobile/: .gitignore  Dockerfile  README.md  app.json  (+4 more)
services/ob-loan-service/: Dockerfile  openapi.yaml  pyproject.toml  requirements.txt
services/ob-loan-service/app/: __init__.py  config.py  main.py
services/ob-loan-service/app/api/: applications.py  contracts.py  decisions.py  disbursements.py  health.py  internal.py  tpps.py  webhooks.py
services/ob-loan-service/app/core/: audit.py  auth.py  database.py  errors.py  idempotency.py  logging.py  metrics.py  middleware.py  rate_limit.py  redis.py
services/ob-loan-service/app/schemas/: application.py  contract.py  decision.py  disbursement.py  money.py  tpp.py  webhook.py
services/ob-loan-service/app/services/: affordability.py  amortization.py  application_service.py  banking_client.py  contract_service.py  credit_bureau.py  decision_engine.py  disbursement_service.py
services/ob-loan-service/app/workers/: webhook_worker.py
services/ob-loan-service/k8s/: deployment.yaml
services/ob-loan-service/migrations/: 001_initial.sql
services/ob-loan-service/tests/: conftest.py
services/ob-loan-service/tests/unit/: test_amortization.py  test_credit_bureau.py  test_money.py
(+249 files in other folders)
