[project]
name = "ob-loan-service"
version = "1.0.0"
description = "Bank Dhofar Open Finance — Auto Loan Origination service"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1",
  "asyncpg==0.30.0",
  "redis[hiredis]==5.2.0",
  "pydantic[email]==2.10.3",
  "pydantic-settings==2.6.1",
  "email-validator==2.2.0",
  "python-jose[cryptography]==3.3.0",
  "httpx==0.28.1",
  "prometheus-client==0.21.1",
  "structlog==24.4.0",
  "python-multipart==0.0.17",
  "orjson==3.10.12",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.24.0",
  "pytest-cov==6.0.0",
  "httpx==0.28.1",
  "ruff==0.8.1",
  "mypy==1.13.0",
  "types-redis==4.6.0.20241004",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # long lines handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing --cov-report=xml"
markers = [
  "integration: integration tests that need a real Postgres + Redis",
  "unit: pure unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py"]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
